// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls remove when FileProgress remove button clicked 1`] = `
<FileList
  files={
    Array [
      Object {
        "name": "asdf",
      },
    ]
  }
  removeFile={[Function]}
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      <p
        className="File-List-Title"
      >
        Bounty Files
         
        1
      </p>
      <Button
        className="Clear-Button"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="Button"
          disabled={false}
          onClick={[Function]}
        >
          Clear All
        </button>
      </Button>
    </header>
    <ul
      className="List"
    >
      <ListItem
        item="asdf"
        key="asdf"
        remove={[Function]}
      >
        <li
          className="ListItem"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <p
            className="ListItem-Name"
          >
            asdf
          </p>
          <span
            className="ListItem-Remove"
          >
            <RemoveButton
              onClick={[Function]}
            >
              <button
                className="Remove-Button"
                onClick={[Function]}
              >
                <img
                  alt="remove"
                  className="redx"
                  src="/img/red-x.svg"
                />
              </button>
            </RemoveButton>
          </span>
        </li>
      </ListItem>
    </ul>
  </div>
</FileList>
`;

exports[`contains 3 FileProgress when 3 added 1`] = `
<div
  class="File-List"
>
  <header
    class="File-List-Header"
  >
    <p
      class="File-List-Title"
    >
      Bounty Files 3
    </p>
    <button
      class="Button"
    >
      Clear All
    </button>
  </header>
  <ul
    class="List"
  >
    <li
      class="ListItem"
    >
      <p
        class="ListItem-Name"
      >
        asdf
      </p>
    </li>
    <li
      class="ListItem"
    >
      <p
        class="ListItem-Name"
      >
        demo
      </p>
    </li>
    <li
      class="ListItem"
    >
      <p
        class="ListItem-Name"
      >
        test
      </p>
    </li>
  </ul>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  class="File-List"
>
  <header
    class="File-List-Header"
  >
    <p
      class="File-List-Title"
    >
      Bounty Files 0
    </p>
    <button
      class="Button"
      disabled=""
    >
      Clear All
    </button>
  </header>
  <ul
    class="List"
  >
    
  </ul>
</div>
`;
